# pic-smaller

./: .eslintrc.cjs  CLEAN_USAGE.md  DEAD_CODE_CLEANUP_LOG.md  WASM 问题排查报告.md  WASM_INTEGRATION.md  index.html  package.json  test-wasm.html  vite.config.ts  快速入门指南.md  浏览器测试报告.md
.github/workflows/: ci.yml
assets/: WorkerCompress-BgtUtn4y.js  WorkerCompress-DPGnmYTO.js  WorkerPreview-CdSpdblP.js  WorkerPreview-Cmbd1zYj.js  en-US-CSTiehQ0.js  es-ES-Dgbp-45r.js  fa-IR-B6heoBRY.js  fr-FR--0ZKj3u5.js  index-BFxPonjE.js  index-Ceqeuex5.js  index-Dh2Xsn3A.js  index-DjXB5SYd.css  ja-JP-DuYKnMhf.js  jszip.min-BsCVmbFN.js  ko-KR-64E8XFRh.js  tr-TR-A0FVL84R.js  vconsole.min-ThV-r1k1.js  zh-CN-mlhe9BqE.js  zh-TW-C8G9qV0S.js
docs/log_doc/: QUICK_START.md  WASM 集成修复报告.md  WASM_INTEGRATION.md
pic-compress-wasm/: .gitignore  Cargo.toml  INTEGRATION.md  README.md
pic-compress-wasm/src/: avif.rs  error.rs  lib.rs  png.rs  utils.rs
public/wasm/: pic_compress_wasm.d.ts  pic_compress_wasm.js  pic_compress_wasm_bg.wasm
scripts/: build-wasm.bat  build-wasm.cjs  build-wasm.sh  clean.cjs  integrate-wasm.bat  integrate-wasm.cjs  integrate-wasm.sh
src/: Initial.tsx  functions.ts  mimes.ts  type.ts
src/components/CompressOption/: index.tsx
src/components/UploadCard/: index.module.scss
src/engines/: AvifImage.ts  ImageBase.ts  PicCompressWasm.ts  PngImage.ts  WorkerCompress.ts  WorkerPreview.ts  createWorker.ts  handler.ts  transform.ts
src/locales/: en-US.ts  es-ES.ts  fa-IR.ts  fr-FR.ts  ja-JP.ts  ko-KR.ts  tr-TR.ts  zh-CN.ts  zh-TW.ts
src/pages/home/: useColumn.tsx
src/states/: home.ts
src/utils/: file.ts  format.ts  misc.ts
tests/: utils.test.ts
wasm/: pic_compress_wasm.d.ts  pic_compress_wasm.js  pic_compress_wasm_bg.wasm
