[package]
name = "pic-compress-wasm"
version = "0.1.0"
edition = "2021"
description = "High-performance WebAssembly image compression library for pic-smaller"
license = "MIT"
repository = "https://github.com/fjqz177/pic-smaller"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Image processing - PNG only for now (pure Rust)
image = { version = "0.24", default-features = false, features = ["png"] }
png = "0.17"
ravif = { version = "0.13.0", default-features = false }
imgref = "1.12"
rgb = "0.8"
bytemuck = "1.25"

# Professional PNG quantization (pure Rust, WASM-compatible)
imagequant = { version = "4.4.1", default-features = false }

# Utilities
thiserror = "1.0"
rayon = "1.11.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Performance-optimized release profile
[profile.release]
opt-level = 3
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Single codegen unit for better optimizations
panic = "abort"          # Smaller binary, no unwind on panic
strip = true             # Strip symbols (Rust 1.59+)

# WASM-specific optimizations
[package.metadata.wasm-pack.profile.release]
# Enable all features needed for wasm-opt -O4 optimization
# --enable-bulk-memory: for memory.copy/memory.fill
# --enable-nontrapping-float-to-int: for i32.trunc_sat_f64_u operations
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--strip-producers", "--strip-target-features", "--strip-debug"]